tinkering with inputs, EOD

--- a/src/app/instructions/instructions.component.html
+++ b/src/app/instructions/instructions.component.html
@@ -1,7 +1,7 @@
 <!-- instructions area -->
 <div class="intro">
     <h2 class="titles">Instructions</h2>
-    <p class="alert alert-info">{{ instructions }}</p>
+    <p class="alert alert-info" contenteditable="true">{{ instructions }}</p>
     <h2 class="titles"> Keyboard Shortcuts </h2>
     <ul class="alert alert-warning">
       <li><i class="fa fa-check green"></i> NEXT/PREV - <i class="fa fa-arrow-right green"></i> and <i class="fa fa-arrow-left green"></i></li>
