Added new keys for due date information

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -38,8 +38,8 @@ h3 {
 .imageSize{
 	width: 75%;
 	height: auto;
-	position: absolute;
-	top: -40px;
+//	position: absolute;
+	//top: -40px;
 }
 
 // left menu
