--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -75,12 +75,11 @@
 					<!-- assignment information -->
 						<div class="col-md-9 col-sm-8 col-xs-8 col-lg-9" *ngIf="data.value>0 && data.value < amount-1">
 							<h2 class="titles"><i class="fa fa-file-text-o"></i> Assignment Information</h2>
-							<img *ngIf="data.value>0 && data.value < amount-2" [src]="imageSrc(this.assignments[data.value].due_date)" class="img-responsive imageSize visible-sm visible-xs"/>
 						</div>
 
 						<!-- due date image -->
 						<div class="col-md-3 col-lg-3 hidden-sm hidden-xs" *ngIf="data.value>0 && data.value < amount-2">
-							<img [src]="imageSrc(this.assignments[data.value].due_date)" class="img-responsive imageSize"/>
+							<app-custom-date [value]="data.value" [amount]="data.amount" [assignments]="assignments"></app-custom-date>
 						</div>
 
 						<!-- calendar button
