Added new date and percentage, layout pos fixed, etc

--- a/src/app/custom-date/custom-date.component.html
+++ b/src/app/custom-date/custom-date.component.html
@@ -7,4 +7,6 @@
 <div class="day">
     <h2> {{ getDay() }}</h2>
 </div>
-<h2> {{ getPercentage() }}</h2>
+<div class="percent">
+	<h2> {{ getPercentage() }}% </h2>
+</div>
