--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -72,9 +72,15 @@
 				<!--instructions -->
 						<h3 class="animated fadeIn activityTitle" *ngIf="data.value==0"><i class="fa fa-calendar-o"></i> {{ data.activity }} </h3>
 						<app-instructions *ngIf="data.value==0" [data]="data" [instructions]="instructions"></app-instructions>
+
+					<!-- assignment Info title -->
+					<div class="col-md-12 col-sm-12 col-xs-12 col-lg-12" *ngIf="data.value>0">
+						<h2 class="titles pull-left"><i class="fa fa-file-text-o"></i> Assignment Information</h2>
+						<h2 class="titles pull-right"><i class="fa fa-pie-chart"></i> Date &amp; Percentage</h2>
+					</div>
+
 					<!-- assignment information -->
 						<div class="col-md-9 col-sm-8 col-xs-8 col-lg-9" *ngIf="data.value>0 && data.value < amount-1">
-							<h2 class="titles"><i class="fa fa-file-text-o"></i> Assignment Information</h2>
 							<app-information *ngIf="data.value>0 && data.value < amount-1" [data]="data" [assignments]="assignments" [amount]="amount" [value]="value"></app-information>
 						</div>
 
