--- a/src/styles.scss
+++ b/src/styles.scss
@@ -480,3 +480,14 @@ ul li{
 .leftMenu h1{
 	color: $white;
 }
+
+
+// custom date styles
+.Month h3{
+	color: $white !important;
+	font-family: subHeadings !important;
+}
+
+.day h2, .percent h2{
+	font-family: Headings !important;
+}
