--- a/src/app/print/print.component.html
+++ b/src/app/print/print.component.html
@@ -1,16 +1,23 @@
 <!-- the printed area -->
 <li *ngFor="let d of assignments | keys; let i = index">
       <h2 class="printTitle col-md-12 col-lg-12 col-sm-12 col-xs-12" *ngIf="i>0 && i<8"><button class="smallcircle" (click)="goTo(i)">{{ d.value.symbol }}</button>  {{ d.value.title }}</h2>
+
+<!-- one choice -->
       <div class="one col-md-12 col-lg-12 col-sm-12 col-xs-12" *ngIf="d.value.type=='one'">
-        <img [src]="imageSrc(d.value.due_date)" class="img-responsive imageSize col-md-3 col-lg-3 col-sm-12 col-xs-12" />
+        <!--<img [src]="imageSrc(d.value.due_date)" class="img-responsive imageSize col-md-3 col-lg-3 col-sm-12 col-xs-12" />-->
+        <app-custom-date [value]="i" [amount]="amount" [assignments]="assignments" class="col-md-3 col-lg-3 hidden-sm hidden-xs"></app-custom-date>
         <p class="text col-md-9 col-lg-9 col-sm-12 col-xs-12">{{ d.value.taskA.name }}: {{ d.value.taskA.information }}</p>
       </div>
+
+    <!-- two choices -->
       <div class="two col-md-12 col-lg-12 col-sm-12 col-xs-12" *ngIf="d.value.type=='two'">
-        <img [src]="imageSrc(d.value.due_date)" class="img-responsive imageSize col-md-3 col-lg-3 col-sm-12 col-xs-12" />
+       <!-- <img [src]="imageSrc(d.value.due_date)" class="img-responsive imageSize col-md-3 col-lg-3 col-sm-12 col-xs-12" /> -->
+       <app-custom-date [value]="i" [amount]="amount" [assignments]="assignments" class="col-md-3 col-lg-3 hidden-sm hidden-xs"></app-custom-date>
         <p class="text col-md-9 col-lg-9 col-sm-12 col-xs-12" *ngIf="d.value.taskA.selectA==true">{{ d.value.taskA.name }}: {{ d.value.taskA.information }}</p>
         <p class="text col-md-9 col-lg-9 col-sm-12 col-xs-12" *ngIf="d.value.taskB.selectB==true">{{ d.value.taskB.name }}: {{ d.value.taskB.information }}</p>
       <!--  <p class="text" *ngIf="d.value.taskA.selectA==false && d.value.taskB.selectB==false">Please select an assignment.</p>-->
       </div>
+
       <div class="custom col-md-12 col-lg-12 col-sm-12 col-xs-12" *ngIf="d.value.type=='custom'">
         <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
           <img [src]="imageSrc(d.value.taskA.due_date)" class="img-responsive imageSize col-md-3 col-lg-3 col-sm-12 col-xs-12" />
