More changes to ui

--- a/src/app/information/information.component.html
+++ b/src/app/information/information.component.html
@@ -10,6 +10,6 @@
 		<div class="progress-bar" [ngClass]="colors()" role="progressbar" aria-valuenow="progress()" aria-valuemin="0" aria-valuemax="amount-2" [ngStyle]="{'width': progress()+'%'}">
 		</div>
 </div>
-<span class="circleArea" [ngStyle]="{'left': ((progress()/2.6)+ 5)+'%', 'transition': 'left 0.3s'}"> {{ this.counter }} / {{ this.amount-2 }} </span>
+<span class="circleArea" [ngStyle]="{'left': ((progress()/2.6)+ 5)+'%', 'transition': 'left 0.3s'}"> {{ this.counter-1 }}  / {{ this.amount-3 }} </span>
 </div>
 <hr />
