--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -5,7 +5,7 @@
 <ul class="nav nav-justified buttonList">
     <li *ngFor="let d of assignments | keys; let i = index" class="list">
     <button type="button" class="numButtons circle" id={{i}} (click)="goTo(i)" [ngClass]="{'highlight': i==data.value}">
-          {{ i==0 || i==amount.length-1 ? d.value.symbol : i}}
+          {{ navOutput(i, d.value.symbol) }}
       </button>
       <div id="line" class="hidden-xs hidden-sm" *ngIf="i<assignments.length-1"></div>
   </li>
