--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,7 +43,7 @@
 	<div class="titleArea container">
 		<div class="row">
 			<div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 topHeadingArea">
-				<app-heading [data]="data" [assignments]="assignments" [value]="value"></app-heading>
+				<app-heading [data]="data" [assignments]="assignments" [value]="value" [amount]="amount"></app-heading>
 			</div>
 		</div>
 	</div>
@@ -85,8 +85,8 @@
 						</div>
 
 						<!-- due date image -->
-						<div class="col-md-3 col-lg-3 hidden-sm hidden-xs" *ngIf="data.value>0 && data.value < amount-2">
-							<app-custom-date [value]="data.value" [amount]="data.amount" [assignments]="assignments"></app-custom-date>
+						<div class="col-md-3 col-lg-3 hidden-sm hidden-xs" *ngIf="data.value>0 && data.value<amount-1">
+							<app-custom-date [value]="data.value" [amount]="data.amount" [assignments]="assignments" *ngIf="assignments[data.value].type != 'custom'"></app-custom-date>
 						</div>
 
 						<!-- calendar button
