--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,121 +28,114 @@
 	</div>
 </div>-->
 <!-- end left menu -->
-
 <!-- main app component -->
 <div class="container">
-	<div class="row">
-	<!-- top menu -->
-	<div class="container">
-		<div class="row">
-			<app-menu [data]="data" [courseName]="data.course_title"></app-menu>
-		</div>
-	</div>
+    <div class="row">
+        <!-- top menu -->
+        <div class="container">
+            <div class="row">
+                <app-menu [data]="data" [courseName]="data.course_title"></app-menu>
+            </div>
+        </div>
+        <!-- heading with symbol and title -->
+        <div class="titleArea container">
+            <div class="row">
+                <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 topHeadingArea">
+                    <app-heading [data]="data" [assignments]="assignments" [value]="value" [amount]="amount"></app-heading>
+                </div>
+            </div>
+        </div>
+        <!--error message-->
+        <app-error [data]="data" [assignments]="assignments" [amount]="amount"></app-error>
+        <!--	<app-title [data]="data" [assignments]="assignments" [amount]="amount"></app-title>-->
+        <!-- save button -->
+        <!-- when print is saved -->
+        <app-saved [data]="data" [assignments]="assignments" [amount]="amount" [alert]="alert"></app-saved>
+        <!-- the tasks  and instructions Area -->
+        <div class="workArea container">
+            <!-- title of the interactive -->
+            <div class="row">
+                <!-- added to center div-->
+                <div class="col-md-1 col-lg-1 hidden-sm hidden-xs">
+                    <!-- previous button -->
+                    <app-previous [data]="data" [assignments]="assignments"></app-previous>
+                </div>
+                <div class="animated fadeIn box col-md-10 col-lg-10 col-sm-12 col-xs-12">
+                    <!--instructions -->
+                    <h3 class="animated fadeIn activityTitle" *ngIf="data.value==0"><i class="fa fa-calendar-o"></i> {{ data.activity }} </h3>
+                    <app-instructions *ngIf="data.value==0" [data]="data" [instructions]="instructions"></app-instructions>
+                    <!-- assignment Info title -->
+                    <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12" *ngIf="data.value>0 && data.value < amount-1">
+                        <h2 class="titles pull-left"><i class="fa fa-file-text-o"></i> Assignment Information</h2>
+                        <h2 class="titles pull-right"><i class="fa fa-calendar-o"></i> Date &amp; Percentage</h2>
+                    </div>
+                    <!-- assignment information -->
+                    <div class="col-md-9 col-sm-8 col-xs-8 col-lg-9" *ngIf="data.value>0 && data.value < amount-1">
+                        <app-information *ngIf="data.value>0 && data.value < amount-1" [data]="data" [assignments]="assignments" [amount]="amount" [value]="value"></app-information>
+                    </div>
+                    <!-- due date image -->
+                    <div class="col-md-3 col-lg-3 hidden-sm hidden-xs" *ngIf="data.value>0 && data.value<amount-1">
+                        <app-custom-date [value]="data.value" [amount]="amount" [assignments]="assignments" *ngIf="assignments[data.value].type != 'custom'"></app-custom-date>
+                    </div>
 
-	<!-- heading with symbol and title -->
-	<div class="titleArea container">
-		<div class="row">
-			<div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 topHeadingArea">
-				<app-heading [data]="data" [assignments]="assignments" [value]="value" [amount]="amount"></app-heading>
-			</div>
-		</div>
-	</div>
+                    <!-- Progress bar -->
+                    <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12" *ngIf="data.value>0 && data.value < amount-1">
+                    	<h2 class="titles"><i class="fa fa-pie-chart"></i> Assignment Progress</h2>
+                    	<p><app-progress [data]="data" [value]="value" [amount]="amount" [assignments]="assignments" [total]="total"></app-progress></p>
+                    </div>
 
-	<!--error message-->
-	<app-error [data]="data" [assignments]="assignments" [amount]="amount"></app-error>
-<!--	<app-title [data]="data" [assignments]="assignments" [amount]="amount"></app-title>-->
-	<!-- save button -->
-
-	<!-- when print is saved -->
-		<app-saved [data]="data" [assignments]="assignments" [amount]="amount" [alert]="alert"></app-saved>
-
-	<!-- the tasks  and instructions Area -->
-	<div class="workArea container">
-
-		<!-- title of the interactive -->
-		<div class="row">
-
-			<!-- added to center div-->
-			<div class="col-md-1 col-lg-1 hidden-sm hidden-xs">
-				<!-- previous button -->
-				<app-previous [data]="data" [assignments]="assignments"></app-previous>
-			</div>
-
-			<div class="animated fadeIn box col-md-10 col-lg-10 col-sm-12 col-xs-12">
-				<!--instructions -->
-						<h3 class="animated fadeIn activityTitle" *ngIf="data.value==0"><i class="fa fa-calendar-o"></i> {{ data.activity }} </h3>
-						<app-instructions *ngIf="data.value==0" [data]="data" [instructions]="instructions"></app-instructions>
-
-					<!-- assignment Info title -->
-					<div class="col-md-12 col-sm-12 col-xs-12 col-lg-12" *ngIf="data.value>0 && data.value < amount-1">
-						<h2 class="titles pull-left"><i class="fa fa-file-text-o"></i> Assignment Information</h2>
-						<h2 class="titles pull-right"><i class="fa fa-pie-chart"></i> Date &amp; Percentage</h2>
-					</div>
-
-					<!-- assignment information -->
-						<div class="col-md-9 col-sm-8 col-xs-8 col-lg-9" *ngIf="data.value>0 && data.value < amount-1">
-							<app-information *ngIf="data.value>0 && data.value < amount-1" [data]="data" [assignments]="assignments" [amount]="amount" [value]="value"></app-information>
-						</div>
-
-						<!-- due date image -->
-						<div class="col-md-3 col-lg-3 hidden-sm hidden-xs" *ngIf="data.value>0 && data.value<amount-1">
-							<app-custom-date [value]="data.value" [amount]="data.amount" [assignments]="assignments" *ngIf="assignments[data.value].type != 'custom'"></app-custom-date>
-						</div>
-
-						<!-- calendar button
+                    <!-- calendar button
 						<div class="col-md-3 visible-md visible-lg col-lg-3 " *ngIf="data.value>0 && data.value < amount-1">
 							<button class="btn btn-primary btn-lg"  data-toggle="modal" data-target="#myModal"> <i class="fa fa-calendar"></i> Add to Calendar</button>
 						</div> -->
-
-						<div class="col-sm-3 col-xs-3 visible-sm visible-xs" *ngIf="data.value>0">
-							<!-- previous button -->
-							<app-previous [data]="data" [assignments]="assignments"></app-previous>
-							<!-- next button -->
-							<app-next [data]="data" [assignments]="assignments" [amount]="amount"></app-next>
-						</div>
-
-					<!-- one task -->
-					<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-						<app-one-task [data]="data" *ngIf="data.value>0" [assignments]="assignments"></app-one-task>
-					</div>
-					<!-- two tasks -->
-						<app-two-tasks [data]="data" *ngIf="data.value>0" [assignments]="assignments"></app-two-tasks>
-
-					<!-- custom tasks -->
-					<app-custom *ngIf="data.value>0" [data]="data" [assignments]="assignments" [amount]="amount"></app-custom>
-
-						<!-- print area -->
-						<div class="printArea" *ngIf="data.print==true">
-							<div class="col-md-9 col-lg-9 col-sm-9 col-xs-9"><h2 class="titles">Review Information</h2></div>
-							<div class="col-md-3 col-lg-3 col-sm-3 col-xs-3"><app-download [data]="data" [assignments]="assignments" [amount]="amount" [alert]="alert"></app-download></div>
-							<div class="col-md-12 col-lg-12 col-sm-12 col-xs-12"><p> {{ data.review_instructions }} </p></div>
-							<hr/>
-							<ul class="print col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<app-print [data]="data" [assignments]="assignments" [amount]="amount"></app-print>
-							</ul>
-						</div>
-			</div>
-
-			<div class="col-md-1 col-lg-1 hidden-sm hidden-xs">
-				<!-- next button -->
-				<app-next [data]="data" [assignments]="assignments" [amount]="amount"></app-next>
-			</div>
-
-		</div>
+                    <div class="col-sm-3 col-xs-3 visible-sm visible-xs" *ngIf="data.value>0">
+                        <!-- previous button -->
+                        <app-previous [data]="data" [assignments]="assignments"></app-previous>
+                        <!-- next button -->
+                        <app-next [data]="data" [assignments]="assignments" [amount]="amount"></app-next>
+                    </div>
+                    <!-- one task -->
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                        <app-one-task [data]="data" *ngIf="data.value>0" [assignments]="assignments"></app-one-task>
+                    </div>
+                    <!-- two tasks -->
+                    <app-two-tasks [data]="data" *ngIf="data.value>0" [assignments]="assignments"></app-two-tasks>
+                    <!-- custom tasks -->
+                    <app-custom *ngIf="data.value>0" [data]="data" [assignments]="assignments" [amount]="amount"></app-custom>
+                    <!-- print area -->
+                    <div class="printArea" *ngIf="data.print==true">
+                        <div class="col-md-9 col-lg-9 col-sm-9 col-xs-9">
+                            <h2 class="titles">Review Information</h2></div>
+                        <div class="col-md-3 col-lg-3 col-sm-3 col-xs-3">
+                            <app-download [data]="data" [assignments]="assignments" [amount]="amount" [alert]="alert"></app-download>
+                        </div>
+                        <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
+                            <p> {{ data.review_instructions }} </p>
+                        </div>
+                        <hr/>
+                        <ul class="print col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                            <app-print [data]="data" [assignments]="assignments" [amount]="amount"></app-print>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-1 col-lg-1 hidden-sm hidden-xs">
+                    <!-- next button -->
+                    <app-next [data]="data" [assignments]="assignments" [amount]="amount"></app-next>
+                </div>
+            </div>
+        </div>
+        <!-- bottom nav bar and tooltips -->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 navArea">
+                    <app-nav [d]="d" [data]="data" [assignments]="assignments" [amount]="amount" [value]="value" (valueChanged)="value = $event"></app-nav>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-
-	<!-- bottom nav bar and tooltips -->
-<div class="container">
-	<div class="row">
-		<div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 navArea">
-			<app-nav [d]="d" [data]="data" [assignments]="assignments" [amount]="amount" [value]="value" (valueChanged)="value = $event"></app-nav>
-		</div>
-	</div>
-</div>
-</div>
-</div><!-- end main component -->
-
+<!-- end main component -->
 <!--calendar area-->
 <div class="col-md-12 col-lg-12">
-	<app-calendar-app [data]="data" [assignments]="assignments" [amount]="amount"></app-calendar-app>
+    <app-calendar-app [data]="data" [assignments]="assignments" [amount]="amount"></app-calendar-app>
 </div>
