--- a/src/app/multi-tasks/multi-tasks.component.html
+++ b/src/app/multi-tasks/multi-tasks.component.html
@@ -1,8 +1,8 @@
 <div *ngFor="let d of assignments | keys; let i = index">
     <div class="twoTasks" *ngIf="d.value.type=='two' && i==data.value">
-        <div *ngFor="let t of d.value.tasks | keys" class="taskA col-sm-12 col-xs-12 col-lg-6 col-md-6">
+        <div *ngFor="let t of d.value.tasks | keys; let k = index" class="taskA col-sm-12 col-xs-12 col-lg-6 col-md-6">
             <app-tasks class="tasks" [data]="data" [assignments]="assignments" [amount]="amount" [value]="value" [title]="t.value.name" [information]="t.value.information"></app-tasks>
-            <app-select [data]="data" [assignments]="assignments" [amount]="amount" [value]="value" [d]="t"></app-select>
+            <app-select [data]="data" [assignments]="assignments" [amount]="amount" [value]="value" [t]="t" [d]="d" [index]="k"></app-select>
         </div>
     </div>
 </div>
