--- a/src/app/print/print.component.html
+++ b/src/app/print/print.component.html
@@ -9,12 +9,13 @@
         <p class="text col-md-9 col-lg-9 col-sm-12 col-xs-12">{{ d.value.taskA.name }}: {{ d.value.taskA.information }}</p>
       </div>
 
-    <!-- two choices -->
+    <!-- multiple choices -->
       <div class="two col-md-12 col-lg-12 col-sm-12 col-xs-12" *ngIf="d.value.type=='two'">
        <!-- <img [src]="imageSrc(d.value.due_date)" class="img-responsive imageSize col-md-3 col-lg-3 col-sm-12 col-xs-12" /> -->
        <app-custom-date [value]="i" [amount]="amount" [assignments]="assignments" class="col-md-3 col-lg-3 hidden-sm hidden-xs"></app-custom-date>
-        <p class="text col-md-9 col-lg-9 col-sm-12 col-xs-12" *ngIf="d.value.taskA.selectA==true">{{ d.value.taskA.name }}: {{ d.value.taskA.information }}</p>
-        <p class="text col-md-9 col-lg-9 col-sm-12 col-xs-12" *ngIf="d.value.taskB.selectB==true">{{ d.value.taskB.name }}: {{ d.value.taskB.information }}</p>
+        <div *ngFor="let t of d.value.tasks | keys">
+        <p class="text col-md-9 col-lg-9 col-sm-12 col-xs-12" *ngIf="t.value.select==true">{{ t.value.name }}: {{ t.value.information }}</p>
+        </div>
       <!--  <p class="text" *ngIf="d.value.taskA.selectA==false && d.value.taskB.selectB==false">Please select an assignment.</p>-->
       </div>
 
