--- a/src/app/print/print.component.html
+++ b/src/app/print/print.component.html
@@ -20,13 +20,9 @@
       </div>
 
       <div class="custom col-md-12 col-lg-12 col-sm-12 col-xs-12" *ngIf="d.value.type=='custom'">
-        <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
-          <img [src]="imageSrc(d.value.taskA.due_date)" class="img-responsive imageSize col-md-3 col-lg-3 col-sm-12 col-xs-12" />
-          <p class="text col-md-9 col-lg-9 col-sm-12 col-xs-12" *ngIf="d.value.taskA.selectA==true">{{ d.value.taskA.name }}: {{ d.value.taskA.information }}</p>
-      </div>
-      <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
-        <img [src]="imageSrc(d.value.taskB.due_date)" class="img-responsive imageSize col-md-3 col-lg-3 col-sm-12 col-xs-12" />
-        <p class="text col-md-9 col-lg-9 col-sm-12 col-xs-12" *ngIf="d.value.taskB.selectB==true">{{ d.value.taskB.name }}: {{ d.value.taskB.information }}</p>
-      </div>
+        <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12" *ngFor="let t of d.value.tasks | keys">
+          <img [src]="imageSrc(t.value.due_date)" class="img-responsive imageSize col-md-3 col-lg-3 col-sm-12 col-xs-12" />
+          <p class="text col-md-9 col-lg-9 col-sm-12 col-xs-12" *ngIf="d.value.taskB.selectB==true">{{ t.value.name }}: {{ t.value.information }}</p>
+        </div>
       </div>
     </li>
