--- a/src/app/print/print.component.html
+++ b/src/app/print/print.component.html
@@ -20,7 +20,7 @@
       </div>
 
       <div class="custom col-md-12 col-lg-12 col-sm-12 col-xs-12" *ngIf="d.value.type=='custom'">
-        <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12" *ngFor="let p of d.value.due_date | keys">
+        <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
           <app-custom-date [value]="i" [amount]="amount" [assignments]="assignments" class="col-md-3 col-lg-3 hidden-sm hidden-xs"></app-custom-date>
           <p class="text col-md-9 col-lg-9 col-sm-12 col-xs-12" *ngFor="let t of d.value.tasks | keys"><b>{{ t.value.name }}</b>: {{ t.value.information }}</p>
         </div>
