--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,6 +31,8 @@
 <!-- main app component -->
 <div class="container">
     <div class="row">
+    <button class="btn btn-primary btn-lg" (click)="postData()">Post Title</button>
+    <h1> Output: {{ postRequest }}</h1>
         <!-- top menu -->
         <div class="container">
             <div class="row">
