--- a/src/app/progress/progress.component.scss
+++ b/src/app/progress/progress.component.scss
@@ -10,3 +10,13 @@
 .infos{
   margin-bottom: 30px;
 }
+
+.progress{
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#f5f5f5+0,e0e0e0+100 */
+background: #f5f5f5; /* Old browsers */
+background: -moz-linear-gradient(left,  #f5f5f5 0%, #e0e0e0 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(left,  #f5f5f5 0%,#e0e0e0 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to right,  #f5f5f5 0%,#e0e0e0 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f5f5', endColorstr='#e0e0e0',GradientType=1 ); /* IE6-9 */
+
+}
