Added dynamic keys for the ui

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,7 +37,7 @@
         <!-- top menu -->
         <div class="container">
             <div class="row">
-                <app-menu [data]="data" [courseName]="data.course_title"></app-menu>
+                <app-menu [data]="data" [courseName]="data.course_title" [ui]="ui"></app-menu>
             </div>
         </div>
         <!-- heading with symbol and title -->
