--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -5,7 +5,7 @@
 <!-- course name -->
 <div class="heading col-lg-12 col-md-12 col-sm-12 col-xs-12">
   <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
-    <h1 class="courseTitle">{{ courseName }}</h1>
+    <h1 class="courseTitle" [ngStyle]="{'color': ui?.heading?.color}">{{ courseName }}</h1>
   </div>
 
   <!-- menu -->
