--- a/src/styles.scss
+++ b/src/styles.scss
@@ -129,7 +129,7 @@ p, span, ul li{
 }
 
 .heading{
-	background: $blue !important;
+	//background: $blue !important;
 	padding: 10px 5px 10px 5px;
 }
 
