Added the toolbar and the angular 2 color picker

--- a/src/app/error/error.component.html
+++ b/src/app/error/error.component.html
@@ -1,9 +1,9 @@
 <div class="errorBackdrop animated fadeIn col-md-12 col-lg-12" *ngIf="data.error.open==true">
   <div class="errorMessageArea animated flipInX" *ngIf="data.error.open==true">
-    <button class="close" (click)="data.error.open=false"><i class="fa fa-times"></i></button>
-    <h2 class="titles"><i class="fa fa-thumbs-down"></i> {{ data.error.title }}</h2>
-    <p>{{ data.error.message }}</p>
-    <button class="errorselections right" (click)="data.error.open=false"><i class="fa fa-smile-o"></i> Got it!</button>
+    <button class="close" (click)="data.error.open=false"><i class="fa fa-times" [ngStyle]="{'color': ui?.text?.color}"></i></button>
+    <h2 class="titles" [ngStyle]="{'color': ui?.subheadings?.color}"><i class="fa fa-thumbs-down"></i> {{ data.error.title }}</h2>
+    <p [ngStyle]="{'color': ui?.text?.dark}">{{ data.error.message }}</p>
+    <button class="errorselections right" (click)="data.error.open=false" [ngStyle]="{'background': ui?.buttons?.color, 'color': ui?.text?.color}"><i class="fa fa-smile-o"></i> Got it!</button>
     <div class="clear"></div>
   </div>
 </div>
