--- a/src/app/saved/saved.component.html
+++ b/src/app/saved/saved.component.html
@@ -1,9 +1,9 @@
 <div class="savedBackdrop animated fadeIn" *ngIf="data.alert==true">
   <div class="savedMessageArea animated flipInX">
-    <button class="close" (click)="data.alert=false"><i class="fa fa-times"></i></button>
-    <h2 class="titles center"><i class="fa fa-check"></i> Print Saved!</h2>
-    <p> Your custom planner has been saved to your computer.</p>
-    <button class="errorselections right" (click)="close()"><i class="fa fa-smile-o"></i> Awesome!</button>
+    <button class="close" (click)="data.alert=false"><i class="fa fa-times" [ngStyle]="{'color': ui?.text?.color}"></i></button>
+    <h2 class="titles center" [ngStyle]="{'color': ui?.subheadings?.color}"><i class="fa fa-check"></i> Print Saved!</h2>
+    <p [ngStyle]="{'color': ui?.text?.dark}"> Your custom planner has been saved to your computer.</p>
+    <button class="errorselections right" (click)="close()" [ngStyle]="{'background': ui?.buttons?.color, 'color': ui?.text?.color}"><i class="fa fa-smile-o"></i> Awesome!</button>
     <div class="clear"></div>
   </div>
 </div>
