Added ui custom menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,32 +1,19 @@
 <!-- left app menu -->
-<!--<div class="leftMenu">
+<div class="leftMenu">
 	<div class="container Menu">
 		<div class="row">
 
 			<div class="col-md-3 col-lg-3">
 				<button class="btn btn-primary btn-lg"><i class="fa fa-times"></i></button>
 			</div>
-			<div class="col-md-9 col-lg-9">
-				<h1> Spring 2017 </h1>
-			</div>
-
 			<div class="col-md-12 col-lg-12">
-				<h3> Student Name </h3>
-			</div>
-
-			<div class="col-md-12 col-lg-12">
-				<h3> Notifications </h3>
-				<p>Notifications will appear hear.</p>
-			</div>
-
-			<div class="col-md-12 col-lg-12">
-				<button class="btn btn-primary btn-lg">Read All</button>
-				<button class="btn btn-primary btn-lg">Clear</button>
+				<!-- ui toolbar - this is where the user can change the ui -->
+                <app-toolbar [ui]="ui"></app-toolbar>
 			</div>
 
 		</div>
 	</div>
-</div>-->
+</div>
 <!-- end left menu -->
 <!-- main app component -->
 <div class="container">
@@ -35,9 +22,6 @@
     <button class="btn btn-primary btn-lg" (click)="postData()">Post Title</button>
     <h1> Output: {{ postRequest }}</h1>-->
         <!-- top menu -->
-
-   <!-- ui toolbar - this is where the user can change the ui -->
-   <app-toolbar [ui]="ui"></app-toolbar>
 
         <div class="container">
             <div class="row">
