--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,2 +1,16 @@
+<h2>Change UI Color Scheme</h2>
+<p>Select the Color you want, and click apply.</p>
 
-<input [(colorPicker)]="color" [style.background]="color" [value]="color"/>
+<p>First Theme Color</p>
+<div class="btn-group" role="group" aria-label="...">
+  <button class="firstColor jscolor btn btn-default btn-lg" id="firstColor"></button>
+  <button class="firstSelection btn btn-default btn-lg" id="firstSelect" (click)="changeFirstColor('firstColor')">Apply First Color</button>
+</div>
+
+<p></p>
+
+<p>Second Theme Color</p>
+<div class="btn-group" role="group" aria-label="...">
+  <button class="secondColor jscolor btn btn-default btn-lg" id="secondColor"></button>
+  <button class="secondSelection btn btn-default btn-lg" id="secondSelect" (click)="changeSecondColor('secondColor')">Apply Second Color</button>
+</div>
