--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,16 +1,58 @@
-<h2>Change UI Color Scheme</h2>
-<p>Select the Color you want, and click apply.</p>
+<h2>Planner Editor</h2>
 
-<p>First Theme Color</p>
-<div class="btn-group" role="group" aria-label="...">
-  <button class="firstColor jscolor btn btn-default btn-lg" id="firstColor"></button>
-  <button class="firstSelection btn btn-default btn-lg" id="firstSelect" (click)="changeFirstColor('firstColor')">Apply First Color</button>
+<div class="panel panel-default">
+<div class="panel-heading"><strong><i class="fa fa-list"></i> Text</strong></div>
+<div class="panel-body">
+<p><strong>Font</strong></p>
+<!-- Single button -->
+<div class="btn-group">
+  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <i class="fa fa-font"></i> Choose Font <span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu">
+    <li><a href="#">Georgia</a></li>
+    <li><a href="#">Arial</a></li>
+    <li><a href="#">Verdana</a></li>
+  </ul>
 </div>
 
 <p></p>
 
-<p>Second Theme Color</p>
+<p><strong>Text Color</strong></p>
 <div class="btn-group" role="group" aria-label="...">
-  <button class="secondColor jscolor btn btn-default btn-lg" id="secondColor"></button>
-  <button class="secondSelection btn btn-default btn-lg" id="secondSelect" (click)="changeSecondColor('secondColor')">Apply Second Color</button>
+  <button class="textColor jscolor btn btn-default btn-md" id="textColor"></button>
+  <button class="textSelection btn btn-default btn-md" id="textSelect" (click)="changeTextColor('textColor')">Apply Text Color</button>
+</div>
+
+</div>
+</div>
+
+
+
+<div class="panel panel-default">
+<div class="panel-heading"><strong><i class="fa fa-paint-brush"></i> Theme Colors</strong></div>
+<div class="panel-body">
+<p><strong>First Theme Color</strong></p>
+<div class="btn-group" role="group" aria-label="...">
+  <button class="firstColor jscolor btn btn-default btn-md" id="firstColor"></button>
+  <button class="firstSelection btn btn-default btn-md" id="firstSelect" (click)="changeFirstColor('firstColor')">Apply First Color</button>
+</div>
+
+<p></p>
+
+<p><strong>Second Theme Color</strong></p>
+<div class="btn-group" role="group" aria-label="...">
+  <button class="secondColor jscolor btn btn-default btn-md" id="secondColor"></button>
+  <button class="secondSelection btn btn-default btn-md" id="secondSelect" (click)="changeSecondColor('secondColor')">Apply Second Color</button>
+</div>
+
+<p></p>
+
+<p><strong>Third Theme Color</strong></p>
+<div class="btn-group" role="group" aria-label="...">
+  <button class="thirdColor jscolor btn btn-default btn-md" id="thirdColor"></button>
+  <button class="thirdSelection btn btn-default btn-md" id="thirdSelect" (click)="changeThirdColor('thirdColor')">Apply Third Color</button>
+</div>
+
+</div>
 </div>
