--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,7 @@
         <div class="titleArea container">
             <div class="row">
                 <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 topHeadingArea" [ngStyle]="{'background': ui?.colors?.fourth}">
-                    <app-heading [data]="data" [assignments]="assignments" [value]="value" [amount]="amount"></app-heading>
+                    <app-heading [data]="data" [assignments]="assignments" [value]="value" [amount]="amount" [ui]="ui"></app-heading>
                 </div>
             </div>
         </div>
@@ -122,7 +122,7 @@
         <!-- bottom nav bar and tooltips -->
         <div class="container">
             <div class="row">
-                <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 navArea">
+                <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 navArea" [ngStyle]="{'background': ui?.colors?.first}">
                     <app-nav [d]="d" [data]="data" [assignments]="assignments" [amount]="amount" [value]="value" (valueChanged)="value = $event"></app-nav>
                 </div>
             </div>
