--- a/src/app/heading/heading.component.html
+++ b/src/app/heading/heading.component.html
@@ -2,7 +2,9 @@
     title and subtitle with symbol
  -->
     <div class="header" *ngFor="let d of assignments | keys; let i = index">
-      <div class="symbol pull-left hidden-xs" *ngIf="i==data.value" [ngStyle]="{'background': ui?.colors?.third, 'color': ui?.text?.color}">{{ headingOutput(i, d.value.symbol) }}</div>
+
+      <div class="symbol pull-left hidden-xs" *ngIf="i==data.value" [ngStyle]="{'background-color': ui?.colors?.third, 'color': ui?.text?.color}">{{ headingOutput(i, d.value.symbol) }}</div>
+
       <h1 class="sub pull-left padding-left hidden-xs" *ngIf="i!=1 && i==data.value" [ngStyle]="{'color': ui?.subheading?.color}">{{  d.value.title }}</h1>
       <!--show if short text -->
       <h1 class="subForLarge pull-left padding-left hidden-xs" *ngIf="i==1 && i==data.value" [ngStyle]="{'color': ui?.subheading?.color}">{{ d.value.title }}</h1>
