--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -123,7 +123,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 navArea" [ngStyle]="{'background': ui?.colors?.first}">
-                    <app-nav [d]="d" [data]="data" [assignments]="assignments" [amount]="amount" [value]="value" (valueChanged)="value = $event"></app-nav>
+                    <app-nav [d]="d" [data]="data" [assignments]="assignments" [amount]="amount" [value]="value" [ui]="ui" (valueChanged)="value = $event"></app-nav>
                 </div>
             </div>
         </div>
