--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -51,7 +51,7 @@
                     <!-- previous button -->
                     <app-previous [data]="data" [assignments]="assignments"></app-previous>
                 </div>
-                <div class="animated fadeIn box col-md-10 col-lg-10 col-sm-12 col-xs-12">
+                <div class="animated fadeIn box col-md-10 col-lg-10 col-sm-12 col-xs-12" [ngStyle]="{'background': ui?.colors?.fourth}">
                     <!--instructions -->
                     <h3 class="animated fadeIn activityTitle" *ngIf="data.value==0"><i class="fa fa-calendar-o"></i> {{ data.activity }} </h3>
                     <app-instructions *ngIf="data.value==0" [data]="data" [instructions]="instructions"></app-instructions>
@@ -73,7 +73,7 @@
                     <!-- Progress bar -->
                     <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12" *ngIf="data.value>0 && data.value < amount-1">
                     	<h2 class="titles"><i class="fa fa-pie-chart"></i> Assignment Progress</h2>
-                    	<p><app-progress [data]="data" [value]="value" [amount]="amount" [assignments]="assignments" [total]="getTotal()"></app-progress></p>
+                    	<p><app-progress [data]="data" [value]="value" [amount]="amount" [assignments]="assignments" [ui]="ui" [total]="getTotal()"></app-progress></p>
                     </div>
 
                     <!-- calendar button
