--- a/src/app/progress/progress.component.html
+++ b/src/app/progress/progress.component.html
@@ -1,8 +1,8 @@
 <!-- progress bar on each question -->
 <div class="progression" *ngFor="let d of assignments | keys; let i = index">
 <div class="progress" *ngIf="i==data.value">
-		<div class="progress-bar" role="progressbar" aria-valuenow="progress()" aria-valuemin="0" aria-valuemax="amount" [ngStyle]="{'width': progress()+'%'}" >
+		<div class="progress-bar" aria-valuenow="progress()" aria-valuemin="0" aria-valuemax="amount" [ngStyle]="{'width': progress()+'%', 'background': ui?.colors?.first}" >
 		</div>
 </div>
-<span class="circleArea" [ngStyle]="{'left': ((progress()/2.6)+ 5)+'%', 'transition': 'left 0.3s'}" *ngIf="i==data.value"> {{ counter }}  / {{ total+1 }} </span>
+<span class="circleArea" [ngStyle]="{'left': ((progress()/2.6)+ 5)+'%', 'transition': 'left 0.3s', 'background': ui?.colors?.third}" *ngIf="i==data.value"> {{ counter }}  / {{ total+1 }} </span>
 </div>
