--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,13 @@
 <!-- left app menu -->
 <div class="leftMenu">
 	<div class="container Menu">
-		<div class="row">
-
-			<div class="col-md-3 col-lg-3">
-				<button class="btn btn-primary btn-lg"><i class="fa fa-times"></i></button>
-			</div>
-			<div class="col-md-12 col-lg-12">
-				<!-- ui toolbar - this is where the user can change the ui -->
-                <app-toolbar [ui]="ui"></app-toolbar>
-			</div>
-
+		<div class="row">       
+        <!-- close button -->
+        <button class="btn btn-primary btn-md"><i class="fa fa-times"></i></button>			
+		   <div class="col-md-12 col-lg-12">
+		     <!-- ui toolbar - this is where the user can change the ui -->
+            <app-toolbar [ui]="ui"></app-toolbar>
+	      </div>
 		</div>
 	</div>
 </div>
